25-AWS-import/code/security_groups.tf
# Security Group for EC2 Instance
resource "aws_security_group" "app_sg" {
  name        = "test-tf-sg1"
  description = "launch-wizard-1 created 2025-12-30T05:35:14.326Z"
  vpc_id      = data.aws_vpc.selected.id

  ingress {
    description = ""
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = ""
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = ""
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "managed_by" : "Terraform"
  }
}
